﻿+++++++++++
Python News
+++++++++++

What's New in Python 3.2 Alpha 3?
=================================

*Release date: XX-Oct-2010*

Core and Builtins
-----------------

- Issue #9979: Create function PyUnicode_AsWideCharString().

- Issue #7397: Mention that importlib.import_module() is probably what someone
  really wants to be using in __import__'s docstring.

- Issue #8521: Allow CreateKeyEx, OpenKeyEx, and DeleteKeyEx functions
  of winreg to use named arguments.

- Issue #9930: Remove bogus subtype check that was causing (e.g.)
  float.__rdiv__(2.0, 3) to return NotImplemented instead of the
  expected 1.5.

- Issue #9808: Implement os.getlogin for Windows. Patch by Jon Anglin.

- Issue #9901: Destroying the GIL in Py_Finalize() can fail if some other
  threads are still running.  Instead, reinitialize the GIL on a second call to
  Py_Initialize().

- All SyntaxErrors now have a column offset and therefore a caret when the
  error is printed.

- Issue #9252: PyImport_Import no longer uses a fromlist hack to return the
  module that was imported, but instead gets the module from sys.modules.

- Issue #9212: The range type_items now provides index() and count()
  methods, to conform to the Sequence ABC.  Patch by Daniel Urban and
  Daniel Stutzbach.

- Issue #7994: Issue a PendingDeprecationWarning if object.__format__
  is called with a non-empty format string. This is an effort to
  future-proof user code. If a derived class does not currently
  implement __format__ but later adds its own __format__, it would
  most likely break user code that had supplied a format string. This
  will be changed to a DeprecationWaring in Python 3.3 and it will be
  an error in Python 3.4.

- Issue #9828: Destroy the GIL in Py_Finalize(), so that it gets properly
  re-created on a subsequent call to Py_Initialize().  The problem (a crash)
  wouldn't appear in 3.1 or 2.7 where the GIL's structure is more trivial.
